[package]
name = "rust-gui"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "chat-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.30"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
